Afegida la llista via JavaScript

--- a/reproductor.html
+++ b/reproductor.html
@@ -15,10 +15,7 @@
 <main>
     <div id="llista">
         <h1>Vídeos</h1>
-        <ul>
-            <li class="sonor">Vídeo 1</li>
-            <li class="sonor">Vídeo 2</li>
-            <li class="sonor">Vídeo 3</li>
+        <ul id="videos">
         </ul>
     </div>
     <div id="visor">
