--- a/reproductor.html
+++ b/reproductor.html
@@ -24,10 +24,10 @@
             <video width="430px" height="315px"></video>
         </div>
         <div id="controls">
-            <div class="boto sonor"><i class="fa fa-step-backward fa-3x"></i><br>ANTERIOR</div>
-            <div class="boto sonor"><i class="fa fa-play fa-3x "></i><br>REPRODUIR</div>
-            <div class="boto sonor"><i class="fa fa-pause fa-3x"></i><br>ATURAR</div>
-            <div class="boto sonor"><i class="fa fa-step-forward fa-3x"></i><br>SEGÜENT</div>
+            <div id="anterior" class="boto sonor"><i class="fa fa-step-backward fa-3x"></i><br>ANTERIOR</div>
+            <div id="reproduir" class="boto sonor"><i class="fa fa-play fa-3x "></i><br>REPRODUIR</div>
+            <div id="aturar" class="boto sonor"><i class="fa fa-pause fa-3x"></i><br>ATURAR</div>
+            <div id="seguent" class="boto sonor"><i class="fa fa-step-forward fa-3x"></i><br>SEGÜENT</div>
         </div>
     </div>
     <div class="clearfix"></div>
